--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,16 @@ margin-right: 10px;
     font-weight: bold;
     color: #fff;
 }
+
+@media(max-width: 768px){
+    .header .container {
+        flex-direction: column;
+        padding-top: 20px;
+        text-align: center;
+    }
+
+    .boxes .container{
+        display: block;
+        text-align: center;
+    }
+}
